# MaaFramework

./: CMakeLists.txt
sample/hptest/: CMakeLists.txt  customaction.cpp  detect_hp.cpp  minimap.cpp  niu.cpp  ocr.cpp  roi.cpp
sample/test/: CMakeLists.txt  task.json  test.cpp
source/MaaFramework/Resource/: PipelineResMgr.cpp
source/MaaFramework/Vision/: NeuralNetworkDetector.cpp  VisionTypes.h  VisionUtils.hpp
source/MaaWin32ControlUnit/Input/: SeizeInput.cpp
source/MaaWin32ControlUnit/Screencap/: GdiScreencap.cpp
